--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,5 @@ Suggests:
     rmarkdown
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+URL: https://github.com/vorpalvorpal/vigil
+BugReports: https://github.com/vorpalvorpal/vigil/issues
