--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,29 +2,38 @@ Package: vigil
 Title: Cross-Platform File System Watching for R
 Version: 0.1.0
 Authors@R: 
-    person("Robin", "Shannon", email = "vorpalvorpal@users.noreply.github.com", role = c("aut", "cre"))
-Description: Provides a unified interface for file system watching across Windows 
-    and Unix-like systems. Supports pattern matching, custom callbacks, and 
-    persistent watchers.
+    person("Robin", "Shannon", 
+           email = "vorpalvorpal@users.noreply.github.com",
+           role = c("aut", "cre"))
+Description: Provides a unified interface for file system watching across Windows
+    and Unix-like systems. Supports pattern matching, custom callbacks, and
+    persistent watchers through native system services including Windows Task
+    Scheduler, systemd, and launchd.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: 
-    fs,
-    jsonlite,
-    cli,
-    uuid,
-    checkmate,
-    purrr,
-    tibble,
-    processx,
-    future
-Suggests: 
+Imports:
+    fs (>= 1.5.0),
+    jsonlite (>= 1.8.0),
+    cli (>= 3.0.0),
+    uuid (>= 1.1.0),
+    checkmate (>= 2.1.0),
+    purrr (>= 1.0.0),
+    tibble (>= 3.0.0),
+    stringr (>= 1.5.0),
+    taskscheduleR (>= 1.4.0),
+    sys (>= 3.4.0),
+    dplyr (>= 1.1.0)
+Suggests:
     testthat (>= 3.0.0),
     knitr,
-    rmarkdown
+    rmarkdown,
+    processx,
+    withr,
+    future
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 URL: https://github.com/vorpalvorpal/vigil
 BugReports: https://github.com/vorpalvorpal/vigil/issues
+SystemRequirements: On Linux: inotify-tools. On macOS: fswatch.
