--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,6 @@ Imports:
     purrr (>= 1.0.0),
     tibble (>= 3.0.0),
     stringr (>= 1.5.0),
-    taskscheduleR (>= 1.4.0),
     sys (>= 3.4.0),
     dplyr (>= 1.1.0)
 Suggests:
@@ -31,9 +30,10 @@ Suggests:
     rmarkdown,
     processx,
     withr,
-    future
+    future,
+    taskscheduleR
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 URL: https://github.com/vorpalvorpal/vigil
 BugReports: https://github.com/vorpalvorpal/vigil/issues
-SystemRequirements: On Linux: inotify-tools. On macOS: fswatch.
+SystemRequirements: On Linux: inotify-tools. On macOS: fswatch. On Windows: taskscheduleR.
